--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,14 @@
 
 section {
     display: grid;
+    grid-template-rows: repeat(3, 1fr);
     place-content: center;
-    height: 100vh;
+    height: 100dvh;
+
+    overflow: hidden;
 
     p {
+        place-self: center;
         text-align: justify;
         width: 11rem;
 
@@ -12,5 +16,37 @@ section {
             color: var(--color-primary);
         }
     }
+
+    h1,h2 {
+        text-align: center;
+        font-size: clamp(4rem, 22vw, 11rem);
+        text-transform: uppercase;
+    }
+
+    h1 {
+        animation: --name-in 1s ease forwards;
+    }
+
+    h2 {
+        transform: translateY(20vh);
+        animation: --name-out 1s ease forwards;
+    }
 }
 
+@keyframes --name-in {
+    0% {
+        transform: translateX(-100vw);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes --name-out {
+    0% {
+        transform: translateX(100vw) translateY(20vh);
+    }
+    100% {
+        transform: translateX(0) translateY(20vh);
+    }
+}
