--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,12 @@
+section:nth-of-type(1) {
+    grid-column: 1/-1;
 
-section {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     place-content: center;
-    height: 100dvh;
+    height: 110dvh;
 
-    overflow: hidden;
+    /* overflow: hidden; */
 
     p {
         place-self: center;
@@ -17,36 +18,115 @@ section {
         }
     }
 
-    h1,h2 {
+    h1,
+    h2 {
         text-align: center;
-        font-size: clamp(4rem, 22vw, 11rem);
+        font-size: clamp(var(--text-size-l), 22vw, var(--text-size-display));
         text-transform: uppercase;
     }
 
     h1 {
-        animation: --name-in 1s ease forwards;
+        animation: --left-to-right 1s ease forwards;
     }
 
     h2 {
-        transform: translateY(20vh);
-        animation: --name-out 1s ease forwards;
+        animation: --right-to-left 1s ease forwards;
+        align-self: end;
     }
 }
 
-@keyframes --name-in {
+section.project-section {
+    margin-block: var(--spacing-xl);
+    grid-column: 1/-1;
+
+    ul {
+        display: flex;
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        scrollbar-width: none;
+        scroll-behavior: smooth;
+
+        gap: var(--spacing-s);
+        padding-left: var(--spacing-l);
+
+        li {
+            list-style: none;
+            background-color: var(--color-card-background);
+            overflow: hidden;
+            min-width: 80vw;
+
+            scroll-snap-align: center;
+
+            padding: var(--spacing-s);
+            border-radius: var(--border-radius-m);
+
+            a {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+
+                text-decoration: none;
+                color: var(--color-text);
+
+                h3 {
+                    font-size: var(--text-size-m);
+                    margin-bottom: var(--spacing-xs);
+
+                    grid-column: span 2;
+
+                    @media (width > 90rem) {
+                        grid-column: 1/2;
+                    }
+                }
+
+                p {
+                    max-width: 17rem;
+                    grid-column: span 2;
+                    
+                    @media (width > 90rem) {
+                        grid-column: 1/2;
+                        max-width: 45rem;
+                        
+                    }
+                }
+
+                img {
+                    aspect-ratio: 2/1;
+                    width: 40rem;
+                    object-fit: cover;
+                    object-position: 0% 0%;
+
+                    grid-column: 2/3;
+                    transform: translate(10%, 20%);
+
+                    border-radius: var(--border-radius-s);
+                }
+            }
+
+        }
+    }
+
+}
+
+
+
+
+
+@keyframes --left-to-right {
     0% {
         transform: translateX(-100vw);
     }
+
     100% {
         transform: translateX(0);
     }
 }
 
-@keyframes --name-out {
+@keyframes --right-to-left {
     0% {
-        transform: translateX(100vw) translateY(20vh);
+        transform: translateX(100vw);
     }
+
     100% {
-        transform: translateX(0) translateY(20vh);
+        transform: translateX(0);
     }
 }
