--- a/styles/styleguide.css
+++ b/styles/styleguide.css
@@ -3,7 +3,9 @@
     src: url(../assets/fonts/Inter_18pt-Regular.ttf);
 }
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -13,7 +15,7 @@
     --color-primary: #F18126;
     --color-background: #F0EFED;
     --color-text: #000;
-    --color-card-background: #D9D9D9;
+    --color-card-background: #dbdbdb;
 
     --text-size-display: 11rem;
     --text-size-xl: 5rem;
@@ -26,10 +28,11 @@
     --spacing-m: 2rem;
     --spacing-s: 2rem;
     --spacing-xs: 1rem;
+    --spacing-xxs: 0.5rem;
 
     --border-radius-m: 1rem;
     --border-radius-s: 0.5rem;
-    
+
 
 }
 
@@ -44,7 +47,41 @@ body {
 }
 
 main {
-    
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+
+    margin-inline: var(--spacing-xxs);
+
+    @media (width > 30rem) {
+        margin-inline: var(--spacing-m);
+    }
+}
+
+a {
+    display: block;
+    width: max-content;
+    padding: var(--spacing-xxs) var(--spacing-xs);
+    margin-block: var(--spacing-xs);
+    border-radius: var(--border-radius-s);
+
+    text-decoration: none;
+    color: var(--color-text);
+    background-color: var(--color-background);
+    text-transform: uppercase;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: var(--spacing-xs);
+
+
+    &::after {
+        content: '';
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M20 11H7.83l5.59-5.59L12 4l-8 8l8 8l1.41-1.41L7.83 13H20z'/%3E%3C/svg%3E");
+        width: 1.6em;
+        height: 1.6em;
+        background-size: 100% 100%;
+        display: block;
+        flex-shrink: 0;
+
+        rotate: 135deg;
+    }
 }
