--- a/styles/styleguide.css
+++ b/styles/styleguide.css
@@ -15,7 +15,8 @@
     --color-primary: #F18126;
     --color-background: #F0EFED;
     --color-text: #000;
-    --color-card-background: #dbdbdb;
+    --color-button-bg: #FCE1C3;
+    --color-card-background: #fff;
 
     --text-size-display: 11rem;
     --text-size-xl: 5rem;
@@ -64,13 +65,15 @@ a {
 
     text-decoration: none;
     color: var(--color-text);
-    background-color: var(--color-background);
+    background-color: var(--color-button-bg);
     text-transform: uppercase;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: var(--spacing-xs);
+
+    transition: all 0.1s ease;
 
 
     &::after {
@@ -83,5 +86,12 @@ a {
         flex-shrink: 0;
 
         rotate: 135deg;
+    }
+
+    @media (any-pointer: fine) {
+        &:hover {
+            scale: 1.02;
+            transition: all 0.1s ease;
+        }
     }
 }
