--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,56 @@ section.project-highlight {
     }
 }
 
+section.about {
+    height: 100dvh;
+    
+    margin-block: var(--spacing-xl);
+    
+    @media (width > 788px) {
+        
+        display: grid;
+        place-items: end;
+        gap: var(--spacing-m);
+        grid-template-rows: 1fr 25rem;
+        grid-template-columns: repeat(3, 1fr);
+
+        margin-block: 0;
+    }
+
+    h2 {
+        text-align: start;
+        margin-top: var(--spacing-m);
+        
+        @media (width > 788px) {
+            margin: 0;
+            grid-column: span 2;
+        }
+    }
+
+
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 10rem;
+        
+        border-radius: var(--border-radius-s);
+
+        @media (width > 788px) {
+            height: 100%;
+        }
+
+        &:nth-of-type(1) {
+            grid-column: span 2;
+
+            margin-bottom: var(--spacing-xs);
+
+            @media (width > 788px) {
+               margin-bottom: 0;
+        }
+        }
+    }
+}
+
 
 
 section.more-projects {
